@@ -5,6 +5,7 @@
   * Fixing bug where a node is passed in to Node#new
   * Namespace should be assigned on DocumentFragment creation. LH #66
   * Nokogiri::XML::NodeSet#dup works GH #10
+  * Nokogiri::HTML returns an empty Document when given a blank string GH#11
 
 === 1.2.2 / 2009-03-14
 
